Bug 416947 - Items under "Miscellaneous" section go to "Hardware control" when their visibility settings are modified
Summary: Items under "Miscellaneous" section go to "Hardware control" when their visib...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-30 15:24 UTC by Patrick Silva
Modified: 2020-01-31 15:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-01-30 15:24:26 UTC
SUMMARY
Today I installed Neon unstable edition on my laptop. I opened systray settings, "Touchpad" and "Display Configurarion" items were initialy listed under "Miscellaneous" section, both "Disabled". I changed the visibility setting of "Touchpad" to "Always show" and since then it appears under "Hardware Control" section. The same happened to "Display configuration" after I set its visibility to "Show when relevant".

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.67.0
Qt Version: 5.13.2
Comment 1 Kai Uwe Broulik 2020-01-31 14:44:52 UTC
In the constructor where it loads the applet metadata, every plasmoid just gets UnknownCategory. Only in addApplet when the proper Plasma::Applet* is available will it check the category.
Comment 2 Kai Uwe Broulik 2020-01-31 15:09:51 UTC
Git commit 50f9c3cf5292f8678350e470b35e3623cb4557b8 by Kai Uwe Broulik.
Committed on 31/01/2020 at 15:09.
Pushed by broulik into branch 'Plasma/5.18'.

[System Tray] Initially set correct category for plasmoids

The category was only used for proper Plasma::Applet instances but not unloaded plasmoids from pure metadata.
FIXED-IN: 5.18.0

Differential Revision: https://phabricator.kde.org/D27068

M  +16   -12   applets/systemtray/systemtraymodel.cpp

https://commits.kde.org/plasma-workspace/50f9c3cf5292f8678350e470b35e3623cb4557b8