[System Tray] Initially set correct category for plasmoids

The category was only used for proper Plasma::Applet instances but not unloaded plasmoids from pure metadata.

BUG: 416947
FIXED-IN: 5.18.0

Differential Revision: https://phabricator.kde.org/D27068